--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-site",
-  "homepage": ".",
+  "homepage": "https://patrickluvsoj.github.io/personal-site/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
