changed homepage url to patrickluvsoj.com

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-site",
-  "homepage": "https://patrickluvsoj.github.io/personal-site/",
+  "homepage": "https://patrickluvsoj.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
